# ornax

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yml  pyproject.toml
.github/workflows/: pypi.yml  tests.yml
aerieax/: __init__.py  _version.py
aerieax/hmc/: affine_invar_hmc.py
aerieax/nested_sampling/: affine_invar_constr_hmc.py  nested_sampler_hmc.py
examples/: eggbox.ipynb
eyrieax/hmc/: __init__.py  affine_invar_hmc.py
eyrieax/nested_sampling/: __init__.py
ornax/nested_sampling/: nested_sampler_hmc.py
tests/: test_affine_invar_hmc.py  test_nested_sampler_hmc.py
